<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/visit_for" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:textColor="#426474"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/days_open" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/day_text"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/day_text"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/day_text"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/day_text"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/day_text"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/day_text"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/day_text"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/timing" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="6dp"
        android:paddingEnd="0dp"
        android:textColor="#426474"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/request_button"
        android:padding="12dp"
        android:text="@string/request_token"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/token_view_layer" />

</LinearLayout>