<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingBottom="40sp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/text_field_background"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/enter_full_name"
        android:letterSpacing="0.1"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="4dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_goneMarginBottom="8dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_field_background"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/phone"
        android:letterSpacing="0.1"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="4dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:id="@+id/otpEdit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_field_background"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/otp"
        android:letterSpacing="0.1"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="4dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <Button
        android:id="@+id/buttonPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:padding="8dp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/otpEdit" />

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/colorGoogleBlue"
        android:drawableLeft="@drawable/google"
        android:fontFamily="sans-serif-medium"
        android:padding="8dp"
        android:paddingStart="10dp"
        android:text="@string/logInWithGoogle"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/buttonPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>